--- a/Qcwix.html
+++ b/Qcwix.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="QCwix.css">
     <title>Project</title>
 </head>
 <body>
@@ -26,7 +27,8 @@
         <section>
             <h1>Welcome On Board</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel esse recusandae magni
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur modi fuga libero commodi incidunt quisquam error ipsam laborum blanditiis autem..</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur modi fuga libero commodi incidunt quisquam error ipsam laborum blanditiis autem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore perferendis iure sit rerum? Tempora natus ex in ullam! Voluptates neque quos accusamus consectetur sed, quasi quas recusandae mollitia doloremque alias?</p>
         </section>
     </main>
 
